--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,22 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:colorPrimaryDark">#3F51B5</item>
-        <item name="android:colorPrimary">#3949AB</item>
-        <item name="android:colorAccent">#F44336</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark_Indigo_700</item>
+        <item name="android:colorPrimary">@color/colorPrimary_Indigo_500</item>
     </style>
+
+    <style name="AppTheme.Base.ActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:colorPrimaryDark">@color/colorPrimaryDark_Indigo_700</item>
+        <item name="android:colorPrimary">@color/colorPrimary_Indigo_500</item>
+    </style>
+
+    <style name="AppTheme.Base.ActionBar.Text" parent="Theme.AppCompat.Light.NoActionBar">
+       <item name="android:textColor">@color/primary_text_default_material_dark</item>
+    </style>
+
 </resources>
